fixed line spacing

--- a/app/plants/static/plants/css/style.css
+++ b/app/plants/static/plants/css/style.css
@@ -377,10 +377,6 @@ figcaption {
     background-color: whitesmoke;
     white-space:      normal;
 }
-.bnd-section-contents p
-{
-    line-height: 0.8;
-}
 /* ------------------------------------------------------------ */
 /* Stop floating previous section's image to ensure this        */
 /* section's text starts correctly                              */
